Basic functionality for sharing, function to get list of shared files not included
